Mon Aug 15 01:19:06 GMT 2011  Olly Betts <olly@survex.com>

	* python/pythontest2.py,python/testsuite2.py: Move the check for
	  leaked objects into the testsuite harness so all tests get checked,
	  not just the two which are regression tests for leaks in older
	  versions.  This also gives us a single place to disable it if it
	  should prove problematic in alternative Python implementations.

Sun Aug 14 12:45:09 GMT 2011  Olly Betts <olly@survex.com>

	* python/pythontest2.py: In test_matchingterms_iter, run the code
	  we're testing for leaks twice, and only check for leaks the second
	  time to avoid falsely reporting a leak when some cached value gets
	  initialised under Python 2.5.

Fri Aug 12 23:18:20 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS: Update from 1.2.7 and ChangeLog.

Mon Aug 08 03:35:23 GMT 2011  Olly Betts <olly@survex.com>

	* java/SmokeTest.java: Fix == comparisons with literal strings.

Thu Aug 04 07:34:14 GMT 2011  Olly Betts <olly@survex.com>

	* xapian-headers.i,xapian.i: Wrap iterator operator++ and operator--
	  methods with a new INC_OR_DEC macro, replacing the old NEXT and
	  PREV macros.

Thu Aug 04 07:21:36 GMT 2011  Olly Betts <olly@survex.com>

	* xapian-head.i,xapian-headers.i: We no longer need special handling
	  for ValueIteratorEnd_ in the bindings, as that hack is gone from the
	  C++ API headers.

Thu Aug 04 07:15:53 GMT 2011  Olly Betts <olly@survex.com>

	* xapian-head.i,xapian.i: Update for the Xapian::timeout -> useconds_t
	  change.

Thu Aug 04 06:45:38 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: JAVA_CXXFLAGS is no longer used, so remove it.

Thu Aug 04 00:24:22 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: Add --disable-visibility option to match xapian-core.

Thu Aug 04 00:04:47 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: Add -fshow-column for GCC.

Tue Aug 02 03:49:27 GMT 2011  Olly Betts <olly@survex.com>
